# more-sqlframe

./: LICENSE  pyproject.toml
src/more_sqlframe/: schema_evolution.py
tests/: test_schema_evolution.py
